# mcp-mailchimp

./: .env.example  LICENSE  README.md  devto_draft.md  glama.json  mcpize.yaml  pyproject.toml  requirements.txt  smithery.yaml
.actor/: Dockerfile  actor.json  input_schema.json
mcp_mailchimp/: __init__.py  __main__.py  client.py  server.py
