[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-mailchimp"
version = "0.1.0"
description = "Production-grade MCP server for the Mailchimp Marketing API — 28 tools for campaigns, audiences, members, tags, templates, reports, and automations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alex LaGuardia", email = "alex@alexlaguardia.dev" }
]
keywords = ["mcp", "mailchimp", "email", "marketing", "ai", "llm", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/AlexlaGuardia/mcp-mailchimp"
Repository = "https://github.com/AlexlaGuardia/mcp-mailchimp"
Issues = "https://github.com/AlexlaGuardia/mcp-mailchimp/issues"

[project.scripts]
mcp-mailchimp = "mcp_mailchimp.server:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[tool.hatch.build.targets.wheel]
packages = ["mcp_mailchimp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
